troubleshoot the title

--- a/more.html
+++ b/more.html
@@ -28,7 +28,7 @@
   <!-- google fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap" rel="stylesheet">
-  <title>My learning joural!</title>
+  <title>Emkay's learning journal</title>
   <meta name="description" content="Here is how you con get into Frontend web development in 2023 and start building good looking sites in the shortest time possible.">
 
 </head>
