--- a/about.html
+++ b/about.html
@@ -74,6 +74,8 @@
           <p>I like to think of myself as a lifelong learner I've spent and still spending hours and hours learning, then try to create simple projects using what I learned or work new techniques into existing projects. While this was fun, I felt like it would be helpful to share waht I was learning and most things about my journey with the world.</p>
 
           <p>What fuels my learning is first of all the passion I have for technology and computers as a whole, secondly is mirroring the past, present & the future goals and correlate them to match my goals and preferences. So everything in the niche of my goals is something I dont</p>
+          
+          <p>For any opportunities feel free to checkout my <a href="https://emkay-resume.netlify.app" target="_blank">resume</a></p>
         </article>
 
         <article class="about-article">
@@ -85,6 +87,8 @@
           <p>From the beginning I always take notes about what I am learning After each learning lesson, I use my notes to not only reflect on what I have learned but also write short summaries of what I learned using my own words.</p>
 
           <p>That has helped me grok what I am learning, and I realized that posting my learning summaries was also helping others to learn and stay motivated.</p>
+          
+
         </article>
       </div>
 
@@ -115,7 +119,6 @@
       </div>
 
     </section>
-
     <footer>
       <div class="footer">
         <div>
